# webscript

./: .gitignore  Cargo.toml  README.md  web.config
app/components/: Counter.web  Details.web  EventDemo.web  Greeting.web  PostPreview.web  TodoItem.web  TodoListLive.web
app/layouts/: AppLayout.web
app/models/: Todo.web  User.web
app/pages/: async-demo.web  counter.web  dashboard.web  defer-demo.web  fetch-demo.web  index.web  login.web  posts.web  register.web  todos-live.web  todos.web  ui.web
app/schemas/: AddTodoInput.web  CompleteTodoInput.web  HttpBinGet.web  LoginForm.web  RegisterForm.web  TodoRow.web
db/: schema.sql
db/migrations/: 20260610073210_schema.sql  20260611162439_add_user_auth.sql
docs/: README.md  api-routes.md  auth-and-sessions.md  components.md  configuration.md  control-flow.md  data-loading-and-actions.md  directive-reference.md  docusaurus.config.ts  error-handling.md  examples.md  forms-and-validation.md  html-templates.md  language-syntax.md  overview.md  package.json  pnpm-lock.yaml  requests-and-responses.md  routing.md  security.md  standard-helpers.md  type-system.md
docs/docs/: implementation-status.md  intro.md
e2e/: README.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
e2e/framework/: config.ts  (+10 more)
src/: client.rs  crypto_runtime.rs  db.rs  db_runtime.rs  debugbar.rs  dev.rs  devtools-client.js  devtools.web  diagnostic.rs  expr.rs  main.rs  model_runtime.rs  parser.rs  project.rs  render.rs  runtime.rs  schema.rs  schema_runtime.rs  server.rs  stmt.rs  style.rs  tailwind.rs  types.rs  validate.rs
(+146 files in other folders)
