[package]
name = "webscript"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.5"
rand_core = { version = "0.6", features = ["getrandom"] }
ariadne = "0.4"
async-recursion = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde_json = "1"
tailwind-rs-core = "0.15.4"

[[bin]]
name = "web"
path = "src/main.rs"
